# app-with-plugins-template

./: LICENSE  README.md
.github/workflows/: build.yml
src/: Bundle.cmake.in  CMakeLists.txt  Install.cmake
src/app/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.h  main.cpp
src/core/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/plugin/: CMakeLists.txt  PluginA.cpp  PluginA.h
src/tests/: CMakeLists.txt
